--- a/opdracht-1/styles.css
+++ b/opdracht-1/styles.css
@@ -5,37 +5,74 @@
 /* 0: Voorbeeld: maak de achtergrondkleur van de pagina wit */
 
 body {
-    background-color: #FFFFFF;
+    background-color: white;
 }
 
 /* 1.1 Geef de 'img' tag in the header een ID en zet zijn breedte op 100% */
 
+#jaleh {
+    width: 100%;
+}
 
 
 /* 1.2 Verander de kleur van alle list items in de unordered list naar hsl(110, 29%, 52%) */
-
+ul{
+    color: hsl(110, 29%, 52%);
+}
 
 
 /* 1.3 Geef de 'span' tag in de footer een beschrijvende class name en maak de lettergrootte kleiner  */
-
+.footer_span{
+    font-size: 10px;
+}
 
 
 /* 1.4 Haal de text-decoration van navigatie-links weg, geef onbezochte links de kleur hsl(359, 79%, 56%) en verander de kleur wanneer de gebruiker er overheen hovert. */
+.nav_ul{
+    text-decoration:none;
 
+}
+.nav_ul:hover{
+    color: hsl(359, 79%, 56%);
+
+}
 
 
 /* 1.5 Maak een hover- en visited stijl voor alle links in 'main'. */
 
+.main_link:hover{
+    color:darkmagenta;
 
+}
+.main_link:visited{
+    color:seagreen;
+
+}
 
 /* Verander de achtergrond van de SignUp button. Tip: https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors  */
+.input_signup{
 
+    border-radius: 10px;
+    border: solid 1px black;
+    padding: 5px 10px;
 
+}
+.input_signup:hover{
+    box-shadow: 2px 1px 2px 4px rgb(255, 186, 8),-1px -4px 7px rgb(220, 47, 2);
+}
 
 /* Geef het tekst-veld een blauwe rand wanneer hij in focus is */
+.input_text:focus{
+    border: 3px solid cornflowerblue;
 
-
+}
+.input_text{
+    outline: none;
+}
 
 /* Target alle heading tags op de pagina en zet hun font-family op 'Noto Sans JP', sans-serif */
+.nav_ul{
+    font-family:'Noto Sans JP', sans-serif ;
+}
 
 
